[package]
name = "linked-hash-table"
version = "0.1.1"
edition = "2024"
description = "A linked hash table implementation for insert-order iteration and efficient lookups."
license = "MIT"
keywords = ["hashmap", "linked", "map", "ordered", "insertion-order"]

repository = "https://github.com/xelis-project/linked-hash-table"
homepage = "https://github.com/xelis-project/linked-hash-table"
readme = "README.md"

[features]
serde = ["dep:serde"]

[dependencies]
hashbrown = { version = "0.16" }
serde = { version = "1", default-features = false, optional = true }

[dev-dependencies]
serde_json = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
